--- a/files/var/www/default.css
+++ b/files/var/www/default.css
@@ -2,12 +2,18 @@
  NB 04.10.16: default.css
  */
 html {
-  background-color: #ddd;
   font: 100% 'Trebuchet MS', sans-serif;
+  background-color: #3C3C3B;
 }
 
 body {
-  color: #000;
+  background-color: #FCFCFC;
+  border: solid 1px #ccc;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+
+  color: #3C3C3B;
   display: table;
   margin-left: auto;
   margin-right: auto;
@@ -17,15 +23,10 @@ body {
 
 table {
   border-collapse: collapse;
-  border: solid 1px #ccc;
-  -webkit-appearance: none;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+
   margin-top: 1em;
   margin-bottom: 1em;
+  margin: 1em auto 1em auto;
 }
 
 td, th {
